// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ExchangeTransactionsRow > should render (Expired) 1`] = `
<div>
  <table>
    <tbody>
      <tr
        class="relative css-16ynu5g"
        data-testid="TableRow"
      >
        <td>
          <div
            class="flex px-3 transition-colors duration-100 min-h-11 pl-6 rounded-l items-start my-0 py-3 xl:py-4 xl:min-h-0 flex-col gap-1"
          >
            <button
              class="h-5 w-20 cursor-pointer truncate"
              type="button"
            >
              <div
                class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
              >
                <div
                  class="relative grow text-left"
                >
                  <span
                    class="no-ligatures min-w-0 overflow-hidden text-theme-primary-600 text-sm font-semibold text-base absolute w-full"
                    data-testid="Address__address"
                  >
                    id
                  </span>
                  <span>
                     
                  </span>
                </div>
              </div>
            </button>
            <div
              class="text-xs xl:hidden"
            >
              <span
                data-testid="TimeAgo"
              >
                A few seconds ago
              </span>
            </div>
          </div>
        </td>
        <td
          class="hidden text-sm xl:table-cell"
        >
          <div
            class="flex px-3 my-1 transition-colors duration-100 min-h-11 items-start xl:items-center font-semibold"
          >
            <span
              data-testid="TimeAgo"
            >
              A few seconds ago
            </span>
          </div>
        </td>
        <td>
          <div
            class="flex px-3 my-1 transition-colors duration-100 min-h-11 font-semibold text-sm items-start xl:items-center mt-2 xl:mt-1"
          />
        </td>
        <td
          class="lg:hidden"
        >
          <div
            class="px-3 transition-colors duration-100 min-h-11 items-end flex flex-col gap-1.5 my-3 xl:my-0"
          >
            <div
              class="rounded px-1.5 css-1pbju28"
              color="danger-bg"
              data-testid="AmountLabel__wrapper"
            >
              <div
                class="flex space-x-1 items-stretch"
              >
                <span
                  class="whitespace-nowrap text-sm"
                  data-testid="Amount"
                >
                  - 1 BTC
                </span>
              </div>
            </div>
            <div
              class="rounded px-1.5 css-givenh"
              color="success-bg"
              data-testid="AmountLabel__wrapper"
            >
              <div
                class="flex space-x-1 items-stretch"
              >
                <span
                  class="whitespace-nowrap text-sm"
                  data-testid="Amount"
                >
                  + 100 ARK
                </span>
              </div>
            </div>
          </div>
        </td>
        <td
          class="hidden lg:table-cell"
        >
          <div
            class="flex px-3 transition-colors duration-100 min-h-11 gap-3 justify-end items-start xl:items-center my-3 xl:my-0"
          >
            <div
              class="rounded px-1.5 css-1pbju28"
              color="danger-bg"
              data-testid="AmountLabel__wrapper"
            >
              <div
                class="flex space-x-1 items-stretch"
              >
                <span
                  class="whitespace-nowrap text-sm"
                  data-testid="Amount"
                >
                  - 1 BTC
                </span>
              </div>
            </div>
          </div>
        </td>
        <td
          class="hidden lg:table-cell"
        >
          <div
            class="flex px-3 transition-colors duration-100 min-h-11 gap-3 justify-end items-start xl:items-center my-3 xl:my-0"
          >
            <div
              class="rounded px-1.5 css-givenh"
              color="success-bg"
              data-testid="AmountLabel__wrapper"
            >
              <div
                class="flex space-x-1 items-stretch"
              >
                <span
                  class="whitespace-nowrap text-sm"
                  data-testid="Amount"
                >
                  + 100 ARK
                </span>
              </div>
            </div>
          </div>
        </td>
        <td>
          <div
            class="flex px-3 transition-colors duration-100 min-h-11 justify-center items-start xl:items-center my-3 xl:my-0"
          >
            <span>
              <div
                class="text-theme-danger-400 css-1i4b0eq"
                height="20"
                width="20"
              >
                <svg
                  id="clock-error"
                  viewBox="0 0 20 20"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <path
                    d="M15 8c0-3.9-3.1-7-7-7S1 4.1 1 8s3.1 7 7 7m7 4c2.2 0 4-1.8 4-4s-1.8-4-4-4-4 1.8-4 4 1.8 4 4 4z"
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-miterlimit="10"
                    stroke-width="2"
                  />
                  <path
                    d="M17 13l-4 4"
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  />
                  <path
                    d="M8 8V5m0 3l1 1"
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-miterlimit="10"
                    stroke-width="2"
                  />
                </svg>
              </div>
            </span>
          </div>
        </td>
        <td>
          <div
            class="flex px-3 transition-colors duration-100 min-h-11 pr-6 rounded-r items-start xl:items-center justify-end text-theme-secondary-text my-3 xl:my-0"
          >
            <button
              class="px-5 py-3 space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed rounded text-theme-secondary-700 bg-transparent dark:text-theme-secondary-600 dark:bg-transparent css-1sy20y6"
              data-testid="TableRemoveButton--compact"
              type="button"
            >
              <div
                class="flex items-center space-x-2"
              >
                <div
                  class="css-1i4b0eq"
                  height="20"
                  width="20"
                >
                  <svg
                    id="trash"
                    viewBox="0 0 20 20"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <g
                      fill="none"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    >
                      <path
                        d="M1 3.629h18M11.8 1H8c-.7 0-1.3.607-1.3 1.315h0v1.314H13V2.315C13 1.607 12.5 1 11.8 1h0zM8 14.449v-6.37M11.8 14.449v-6.37M15.7 17.787c-.1.707-.6 1.213-1.3 1.213H5.3c-.7 0-1.2-.506-1.3-1.213L2.9 3.629h14l-1.2 14.158z"
                      />
                    </g>
                  </svg>
                </div>
              </div>
            </button>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`ExchangeTransactionsRow > should render (Failed) 1`] = `
<div>
  <table>
    <tbody>
      <tr
        class="relative css-16ynu5g"
        data-testid="TableRow"
      >
        <td>
          <div
            class="flex px-3 transition-colors duration-100 min-h-11 pl-6 rounded-l items-start my-0 py-3 xl:py-4 xl:min-h-0 flex-col gap-1"
          >
            <button
              class="h-5 w-20 cursor-pointer truncate"
              type="button"
            >
              <div
                class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
              >
                <div
                  class="relative grow text-left"
                >
                  <span
                    class="no-ligatures min-w-0 overflow-hidden text-theme-primary-600 text-sm font-semibold text-base absolute w-full"
                    data-testid="Address__address"
                  >
                    id
                  </span>
                  <span>
                     
                  </span>
                </div>
              </div>
            </button>
            <div
              class="text-xs xl:hidden"
            >
              <span
                data-testid="TimeAgo"
              >
                A few seconds ago
              </span>
            </div>
          </div>
        </td>
        <td
          class="hidden text-sm xl:table-cell"
        >
          <div
            class="flex px-3 my-1 transition-colors duration-100 min-h-11 items-start xl:items-center font-semibold"
          >
            <span
              data-testid="TimeAgo"
            >
              A few seconds ago
            </span>
          </div>
        </td>
        <td>
          <div
            class="flex px-3 my-1 transition-colors duration-100 min-h-11 font-semibold text-sm items-start xl:items-center mt-2 xl:mt-1"
          />
        </td>
        <td
          class="lg:hidden"
        >
          <div
            class="px-3 transition-colors duration-100 min-h-11 items-end flex flex-col gap-1.5 my-3 xl:my-0"
          >
            <div
              class="rounded px-1.5 css-1pbju28"
              color="danger-bg"
              data-testid="AmountLabel__wrapper"
            >
              <div
                class="flex space-x-1 items-stretch"
              >
                <span
                  class="whitespace-nowrap text-sm"
                  data-testid="Amount"
                >
                  - 1 BTC
                </span>
              </div>
            </div>
            <div
              class="rounded px-1.5 css-givenh"
              color="success-bg"
              data-testid="AmountLabel__wrapper"
            >
              <div
                class="flex space-x-1 items-stretch"
              >
                <span
                  class="whitespace-nowrap text-sm"
                  data-testid="Amount"
                >
                  + 100 ARK
                </span>
              </div>
            </div>
          </div>
        </td>
        <td
          class="hidden lg:table-cell"
        >
          <div
            class="flex px-3 transition-colors duration-100 min-h-11 gap-3 justify-end items-start xl:items-center my-3 xl:my-0"
          >
            <div
              class="rounded px-1.5 css-1pbju28"
              color="danger-bg"
              data-testid="AmountLabel__wrapper"
            >
              <div
                class="flex space-x-1 items-stretch"
              >
                <span
                  class="whitespace-nowrap text-sm"
                  data-testid="Amount"
                >
                  - 1 BTC
                </span>
              </div>
            </div>
          </div>
        </td>
        <td
          class="hidden lg:table-cell"
        >
          <div
            class="flex px-3 transition-colors duration-100 min-h-11 gap-3 justify-end items-start xl:items-center my-3 xl:my-0"
          >
            <div
              class="rounded px-1.5 css-givenh"
              color="success-bg"
              data-testid="AmountLabel__wrapper"
            >
              <div
                class="flex space-x-1 items-stretch"
              >
                <span
                  class="whitespace-nowrap text-sm"
                  data-testid="Amount"
                >
                  + 100 ARK
                </span>
              </div>
            </div>
          </div>
        </td>
        <td>
          <div
            class="flex px-3 transition-colors duration-100 min-h-11 justify-center items-start xl:items-center my-3 xl:my-0"
          >
            <span>
              <div
                class="text-theme-danger-400 css-1i4b0eq"
                height="20"
                width="20"
              >
                <svg
                  id="circle-cross"
                  viewBox="0 0 20 20"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <g
                    fill="none"
                    stroke="currentColor"
                    stroke-width="2"
                  >
                    <circle
                      cx="10"
                      cy="10"
                      r="9"
                      stroke-miterlimit="10"
                    />
                    <path
                      d="M7 13l6-6M13 13L7 7"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                    />
                  </g>
                </svg>
              </div>
            </span>
          </div>
        </td>
        <td>
          <div
            class="flex px-3 transition-colors duration-100 min-h-11 pr-6 rounded-r items-start xl:items-center justify-end text-theme-secondary-text my-3 xl:my-0"
          >
            <button
              class="px-5 py-3 space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed rounded text-theme-secondary-700 bg-transparent dark:text-theme-secondary-600 dark:bg-transparent css-1sy20y6"
              data-testid="TableRemoveButton--compact"
              type="button"
            >
              <div
                class="flex items-center space-x-2"
              >
                <div
                  class="css-1i4b0eq"
                  height="20"
                  width="20"
                >
                  <svg
                    id="trash"
                    viewBox="0 0 20 20"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <g
                      fill="none"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    >
                      <path
                        d="M1 3.629h18M11.8 1H8c-.7 0-1.3.607-1.3 1.315h0v1.314H13V2.315C13 1.607 12.5 1 11.8 1h0zM8 14.449v-6.37M11.8 14.449v-6.37M15.7 17.787c-.1.707-.6 1.213-1.3 1.213H5.3c-.7 0-1.2-.506-1.3-1.213L2.9 3.629h14l-1.2 14.158z"
                      />
                    </g>
                  </svg>
                </div>
              </div>
            </button>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`ExchangeTransactionsRow > should render (Finished) 1`] = `
<div>
  <table>
    <tbody>
      <tr
        class="relative css-16ynu5g"
        data-testid="TableRow"
      >
        <td>
          <div
            class="flex px-3 transition-colors duration-100 min-h-11 pl-6 rounded-l items-start my-0 py-3 xl:py-4 xl:min-h-0 flex-col gap-1"
          >
            <button
              class="h-5 w-20 cursor-pointer truncate"
              type="button"
            >
              <div
                class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
              >
                <div
                  class="relative grow text-left"
                >
                  <span
                    class="no-ligatures min-w-0 overflow-hidden text-theme-primary-600 text-sm font-semibold text-base absolute w-full"
                    data-testid="Address__address"
                  >
                    id
                  </span>
                  <span>
                     
                  </span>
                </div>
              </div>
            </button>
            <div
              class="text-xs xl:hidden"
            >
              <span
                data-testid="TimeAgo"
              >
                A few seconds ago
              </span>
            </div>
          </div>
        </td>
        <td
          class="hidden text-sm xl:table-cell"
        >
          <div
            class="flex px-3 my-1 transition-colors duration-100 min-h-11 items-start xl:items-center font-semibold"
          >
            <span
              data-testid="TimeAgo"
            >
              A few seconds ago
            </span>
          </div>
        </td>
        <td>
          <div
            class="flex px-3 my-1 transition-colors duration-100 min-h-11 font-semibold text-sm items-start xl:items-center mt-2 xl:mt-1"
          />
        </td>
        <td
          class="lg:hidden"
        >
          <div
            class="px-3 transition-colors duration-100 min-h-11 items-end flex flex-col gap-1.5 my-3 xl:my-0"
          >
            <div
              class="rounded px-1.5 css-1pbju28"
              color="danger-bg"
              data-testid="AmountLabel__wrapper"
            >
              <div
                class="flex space-x-1 items-stretch"
              >
                <span
                  class="whitespace-nowrap text-sm"
                  data-testid="Amount"
                >
                  - 1 BTC
                </span>
              </div>
            </div>
            <div
              class="rounded px-1.5 css-givenh"
              color="success-bg"
              data-testid="AmountLabel__wrapper"
            >
              <div
                class="flex space-x-1 items-stretch"
              >
                <span
                  class="whitespace-nowrap text-sm"
                  data-testid="Amount"
                >
                  + 100 ARK
                </span>
              </div>
            </div>
          </div>
        </td>
        <td
          class="hidden lg:table-cell"
        >
          <div
            class="flex px-3 transition-colors duration-100 min-h-11 gap-3 justify-end items-start xl:items-center my-3 xl:my-0"
          >
            <div
              class="rounded px-1.5 css-1pbju28"
              color="danger-bg"
              data-testid="AmountLabel__wrapper"
            >
              <div
                class="flex space-x-1 items-stretch"
              >
                <span
                  class="whitespace-nowrap text-sm"
                  data-testid="Amount"
                >
                  - 1 BTC
                </span>
              </div>
            </div>
          </div>
        </td>
        <td
          class="hidden lg:table-cell"
        >
          <div
            class="flex px-3 transition-colors duration-100 min-h-11 gap-3 justify-end items-start xl:items-center my-3 xl:my-0"
          >
            <div
              class="rounded px-1.5 css-givenh"
              color="success-bg"
              data-testid="AmountLabel__wrapper"
            >
              <div
                class="flex space-x-1 items-stretch"
              >
                <span
                  class="whitespace-nowrap text-sm"
                  data-testid="Amount"
                >
                  + 100 ARK
                </span>
              </div>
            </div>
          </div>
        </td>
        <td>
          <div
            class="flex px-3 transition-colors duration-100 min-h-11 justify-center items-start xl:items-center my-3 xl:my-0"
          >
            <span>
              <div
                class="text-theme-success-600 css-1i4b0eq"
                height="20"
                width="20"
              >
                <svg
                  id="circle-check-mark"
                  viewBox="0 0 20 20"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <g
                    fill="none"
                    stroke="currentColor"
                    stroke-width="2"
                  >
                    <circle
                      cx="10"
                      cy="10"
                      r="9"
                      stroke-miterlimit="10"
                    />
                    <path
                      d="M13.6 6.5l-5 6.8c-.2.3-.6.4-.9.2l-.1-.1L6.4 12"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                    />
                  </g>
                </svg>
              </div>
            </span>
          </div>
        </td>
        <td>
          <div
            class="flex px-3 transition-colors duration-100 min-h-11 pr-6 rounded-r items-start xl:items-center justify-end text-theme-secondary-text my-3 xl:my-0"
          >
            <button
              class="px-5 py-3 space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed rounded text-theme-secondary-700 bg-transparent dark:text-theme-secondary-600 dark:bg-transparent css-1sy20y6"
              data-testid="TableRemoveButton--compact"
              type="button"
            >
              <div
                class="flex items-center space-x-2"
              >
                <div
                  class="css-1i4b0eq"
                  height="20"
                  width="20"
                >
                  <svg
                    id="trash"
                    viewBox="0 0 20 20"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <g
                      fill="none"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    >
                      <path
                        d="M1 3.629h18M11.8 1H8c-.7 0-1.3.607-1.3 1.315h0v1.314H13V2.315C13 1.607 12.5 1 11.8 1h0zM8 14.449v-6.37M11.8 14.449v-6.37M15.7 17.787c-.1.707-.6 1.213-1.3 1.213H5.3c-.7 0-1.2-.506-1.3-1.213L2.9 3.629h14l-1.2 14.158z"
                      />
                    </g>
                  </svg>
                </div>
              </div>
            </button>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`ExchangeTransactionsRow > should render (New) 1`] = `
<div>
  <table>
    <tbody>
      <tr
        class="relative css-16ynu5g"
        data-testid="TableRow"
      >
        <td>
          <div
            class="flex px-3 transition-colors duration-100 min-h-11 pl-6 rounded-l items-start my-0 py-3 xl:py-4 xl:min-h-0 flex-col gap-1"
          >
            <button
              class="h-5 w-20 cursor-pointer truncate"
              type="button"
            >
              <div
                class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
              >
                <div
                  class="relative grow text-left"
                >
                  <span
                    class="no-ligatures min-w-0 overflow-hidden text-theme-primary-600 text-sm font-semibold text-base absolute w-full"
                    data-testid="Address__address"
                  >
                    id
                  </span>
                  <span>
                     
                  </span>
                </div>
              </div>
            </button>
            <div
              class="text-xs xl:hidden"
            >
              <span
                data-testid="TimeAgo"
              >
                A few seconds ago
              </span>
            </div>
          </div>
        </td>
        <td
          class="hidden text-sm xl:table-cell"
        >
          <div
            class="flex px-3 my-1 transition-colors duration-100 min-h-11 items-start xl:items-center font-semibold"
          >
            <span
              data-testid="TimeAgo"
            >
              A few seconds ago
            </span>
          </div>
        </td>
        <td>
          <div
            class="flex px-3 my-1 transition-colors duration-100 min-h-11 font-semibold text-sm items-start xl:items-center mt-2 xl:mt-1"
          />
        </td>
        <td
          class="lg:hidden"
        >
          <div
            class="px-3 transition-colors duration-100 min-h-11 items-end flex flex-col gap-1.5 my-3 xl:my-0"
          >
            <div
              class="rounded px-1.5 css-1pbju28"
              color="danger-bg"
              data-testid="AmountLabel__wrapper"
            >
              <div
                class="flex space-x-1 items-stretch"
              >
                <span
                  class="whitespace-nowrap text-sm"
                  data-testid="Amount"
                >
                  - 1 BTC
                </span>
              </div>
            </div>
            <div
              class="rounded pr-1.5 css-givenh"
              color="success-bg"
              data-testid="AmountLabel__wrapper"
            >
              <div
                class="flex space-x-1 items-stretch"
              >
                <div
                  class="flex items-center justify-center bg-theme-success-200 dark:bg-theme-success-700 text-theme-success-700 dark:text-white/70 dark:bg-theme-success-700 -ml-1.5 px-2"
                  data-testid="AmountLabel__hint"
                >
                  <div
                    class="dark:text-white css-15txs7d"
                    height="10"
                    width="10"
                  >
                    <svg
                      id="hint-small"
                      viewBox="0 0 10 10"
                      x="0"
                      xml:space="preserve"
                      xmlns="http://www.w3.org/2000/svg"
                      y="0"
                    >
                      <path
                        d="M7 9H5.503A.503.503 0 0 1 5 8.497V4.503A.503.503 0 0 0 4.497 4H3.5"
                        fill="none"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                      />
                      <circle
                        cx="4.5"
                        cy="1"
                        fill="currentColor"
                        r="1"
                      />
                    </svg>
                  </div>
                </div>
                <span
                  class="whitespace-nowrap text-sm"
                  data-testid="Amount"
                >
                  + 100 ARK
                </span>
              </div>
            </div>
          </div>
        </td>
        <td
          class="hidden lg:table-cell"
        >
          <div
            class="flex px-3 transition-colors duration-100 min-h-11 gap-3 justify-end items-start xl:items-center my-3 xl:my-0"
          >
            <div
              class="rounded px-1.5 css-1pbju28"
              color="danger-bg"
              data-testid="AmountLabel__wrapper"
            >
              <div
                class="flex space-x-1 items-stretch"
              >
                <span
                  class="whitespace-nowrap text-sm"
                  data-testid="Amount"
                >
                  - 1 BTC
                </span>
              </div>
            </div>
          </div>
        </td>
        <td
          class="hidden lg:table-cell"
        >
          <div
            class="flex px-3 transition-colors duration-100 min-h-11 gap-3 justify-end items-start xl:items-center my-3 xl:my-0"
          >
            <div
              class="rounded pr-1.5 css-givenh"
              color="success-bg"
              data-testid="AmountLabel__wrapper"
            >
              <div
                class="flex space-x-1 items-stretch"
              >
                <div
                  class="flex items-center justify-center bg-theme-success-200 dark:bg-theme-success-700 text-theme-success-700 dark:text-white/70 dark:bg-theme-success-700 -ml-1.5 px-2"
                  data-testid="AmountLabel__hint"
                >
                  <div
                    class="dark:text-white css-15txs7d"
                    height="10"
                    width="10"
                  >
                    <svg
                      id="hint-small"
                      viewBox="0 0 10 10"
                      x="0"
                      xml:space="preserve"
                      xmlns="http://www.w3.org/2000/svg"
                      y="0"
                    >
                      <path
                        d="M7 9H5.503A.503.503 0 0 1 5 8.497V4.503A.503.503 0 0 0 4.497 4H3.5"
                        fill="none"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                      />
                      <circle
                        cx="4.5"
                        cy="1"
                        fill="currentColor"
                        r="1"
                      />
                    </svg>
                  </div>
                </div>
                <span
                  class="whitespace-nowrap text-sm"
                  data-testid="Amount"
                >
                  + 100 ARK
                </span>
              </div>
            </div>
          </div>
        </td>
        <td>
          <div
            class="flex px-3 transition-colors duration-100 min-h-11 justify-center items-start xl:items-center my-3 xl:my-0"
          >
            <span>
              <div
                class="text-theme-warning-300 css-1i4b0eq"
                height="20"
                width="20"
              >
                <svg
                  id="clock"
                  viewBox="0 0 20 20"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <g
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-miterlimit="10"
                    stroke-width="2"
                    transform="translate(1.5 1.5)"
                  >
                    <circle
                      cx="8.5"
                      cy="8.5"
                      r="9"
                    />
                    <path
                      d="M8.5 8.5V5.2M8.5 8.5l3.9 3.9"
                    />
                  </g>
                </svg>
              </div>
            </span>
          </div>
        </td>
        <td>
          <div
            class="flex px-3 transition-colors duration-100 min-h-11 pr-6 rounded-r items-start xl:items-center justify-end text-theme-secondary-text my-3 xl:my-0"
          >
            <button
              class="px-5 py-3 space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed rounded text-theme-secondary-700 bg-transparent dark:text-theme-secondary-600 dark:bg-transparent css-1sy20y6"
              data-testid="TableRemoveButton--compact"
              type="button"
            >
              <div
                class="flex items-center space-x-2"
              >
                <div
                  class="css-1i4b0eq"
                  height="20"
                  width="20"
                >
                  <svg
                    id="trash"
                    viewBox="0 0 20 20"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <g
                      fill="none"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    >
                      <path
                        d="M1 3.629h18M11.8 1H8c-.7 0-1.3.607-1.3 1.315h0v1.314H13V2.315C13 1.607 12.5 1 11.8 1h0zM8 14.449v-6.37M11.8 14.449v-6.37M15.7 17.787c-.1.707-.6 1.213-1.3 1.213H5.3c-.7 0-1.2-.506-1.3-1.213L2.9 3.629h14l-1.2 14.158z"
                      />
                    </g>
                  </svg>
                </div>
              </div>
            </button>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`ExchangeTransactionsRow > should render (Refunded) 1`] = `
<div>
  <table>
    <tbody>
      <tr
        class="relative css-16ynu5g"
        data-testid="TableRow"
      >
        <td>
          <div
            class="flex px-3 transition-colors duration-100 min-h-11 pl-6 rounded-l items-start my-0 py-3 xl:py-4 xl:min-h-0 flex-col gap-1"
          >
            <button
              class="h-5 w-20 cursor-pointer truncate"
              type="button"
            >
              <div
                class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
              >
                <div
                  class="relative grow text-left"
                >
                  <span
                    class="no-ligatures min-w-0 overflow-hidden text-theme-primary-600 text-sm font-semibold text-base absolute w-full"
                    data-testid="Address__address"
                  >
                    id
                  </span>
                  <span>
                     
                  </span>
                </div>
              </div>
            </button>
            <div
              class="text-xs xl:hidden"
            >
              <span
                data-testid="TimeAgo"
              >
                A few seconds ago
              </span>
            </div>
          </div>
        </td>
        <td
          class="hidden text-sm xl:table-cell"
        >
          <div
            class="flex px-3 my-1 transition-colors duration-100 min-h-11 items-start xl:items-center font-semibold"
          >
            <span
              data-testid="TimeAgo"
            >
              A few seconds ago
            </span>
          </div>
        </td>
        <td>
          <div
            class="flex px-3 my-1 transition-colors duration-100 min-h-11 font-semibold text-sm items-start xl:items-center mt-2 xl:mt-1"
          />
        </td>
        <td
          class="lg:hidden"
        >
          <div
            class="px-3 transition-colors duration-100 min-h-11 items-end flex flex-col gap-1.5 my-3 xl:my-0"
          >
            <div
              class="rounded px-1.5 css-1pbju28"
              color="danger-bg"
              data-testid="AmountLabel__wrapper"
            >
              <div
                class="flex space-x-1 items-stretch"
              >
                <span
                  class="whitespace-nowrap text-sm"
                  data-testid="Amount"
                >
                  - 1 BTC
                </span>
              </div>
            </div>
            <div
              class="rounded px-1.5 css-givenh"
              color="success-bg"
              data-testid="AmountLabel__wrapper"
            >
              <div
                class="flex space-x-1 items-stretch"
              >
                <span
                  class="whitespace-nowrap text-sm"
                  data-testid="Amount"
                >
                  + 100 ARK
                </span>
              </div>
            </div>
          </div>
        </td>
        <td
          class="hidden lg:table-cell"
        >
          <div
            class="flex px-3 transition-colors duration-100 min-h-11 gap-3 justify-end items-start xl:items-center my-3 xl:my-0"
          >
            <div
              class="rounded px-1.5 css-1pbju28"
              color="danger-bg"
              data-testid="AmountLabel__wrapper"
            >
              <div
                class="flex space-x-1 items-stretch"
              >
                <span
                  class="whitespace-nowrap text-sm"
                  data-testid="Amount"
                >
                  - 1 BTC
                </span>
              </div>
            </div>
          </div>
        </td>
        <td
          class="hidden lg:table-cell"
        >
          <div
            class="flex px-3 transition-colors duration-100 min-h-11 gap-3 justify-end items-start xl:items-center my-3 xl:my-0"
          >
            <div
              class="rounded px-1.5 css-givenh"
              color="success-bg"
              data-testid="AmountLabel__wrapper"
            >
              <div
                class="flex space-x-1 items-stretch"
              >
                <span
                  class="whitespace-nowrap text-sm"
                  data-testid="Amount"
                >
                  + 100 ARK
                </span>
              </div>
            </div>
          </div>
        </td>
        <td>
          <div
            class="flex px-3 transition-colors duration-100 min-h-11 justify-center items-start xl:items-center my-3 xl:my-0"
          >
            <span>
              <div
                class="text-theme-warning-300 css-1i4b0eq"
                height="20"
                width="20"
              >
                <svg
                  id="circle-exclamation-mark"
                  viewBox="0 0 20 20"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <g
                    fill="none"
                    stroke="currentColor"
                    stroke-width="2"
                  >
                    <circle
                      cx="10"
                      cy="10"
                      r="9"
                      stroke-miterlimit="10"
                    />
                    <path
                      d="M10 10.5v-5"
                      stroke-linecap="round"
                      stroke-miterlimit="10"
                    />
                    <path
                      d="M10 14h0"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                    />
                  </g>
                </svg>
              </div>
            </span>
          </div>
        </td>
        <td>
          <div
            class="flex px-3 transition-colors duration-100 min-h-11 pr-6 rounded-r items-start xl:items-center justify-end text-theme-secondary-text my-3 xl:my-0"
          >
            <button
              class="px-5 py-3 space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed rounded text-theme-secondary-700 bg-transparent dark:text-theme-secondary-600 dark:bg-transparent css-1sy20y6"
              data-testid="TableRemoveButton--compact"
              type="button"
            >
              <div
                class="flex items-center space-x-2"
              >
                <div
                  class="css-1i4b0eq"
                  height="20"
                  width="20"
                >
                  <svg
                    id="trash"
                    viewBox="0 0 20 20"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <g
                      fill="none"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    >
                      <path
                        d="M1 3.629h18M11.8 1H8c-.7 0-1.3.607-1.3 1.315h0v1.314H13V2.315C13 1.607 12.5 1 11.8 1h0zM8 14.449v-6.37M11.8 14.449v-6.37M15.7 17.787c-.1.707-.6 1.213-1.3 1.213H5.3c-.7 0-1.2-.506-1.3-1.213L2.9 3.629h14l-1.2 14.158z"
                      />
                    </g>
                  </svg>
                </div>
              </div>
            </button>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`ExchangeTransactionsRow > should render (Verifying) 1`] = `
<div>
  <table>
    <tbody>
      <tr
        class="relative css-16ynu5g"
        data-testid="TableRow"
      >
        <td>
          <div
            class="flex px-3 transition-colors duration-100 min-h-11 pl-6 rounded-l items-start my-0 py-3 xl:py-4 xl:min-h-0 flex-col gap-1"
          >
            <button
              class="h-5 w-20 cursor-pointer truncate"
              type="button"
            >
              <div
                class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
              >
                <div
                  class="relative grow text-left"
                >
                  <span
                    class="no-ligatures min-w-0 overflow-hidden text-theme-primary-600 text-sm font-semibold text-base absolute w-full"
                    data-testid="Address__address"
                  >
                    id
                  </span>
                  <span>
                     
                  </span>
                </div>
              </div>
            </button>
            <div
              class="text-xs xl:hidden"
            >
              <span
                data-testid="TimeAgo"
              >
                A few seconds ago
              </span>
            </div>
          </div>
        </td>
        <td
          class="hidden text-sm xl:table-cell"
        >
          <div
            class="flex px-3 my-1 transition-colors duration-100 min-h-11 items-start xl:items-center font-semibold"
          >
            <span
              data-testid="TimeAgo"
            >
              A few seconds ago
            </span>
          </div>
        </td>
        <td>
          <div
            class="flex px-3 my-1 transition-colors duration-100 min-h-11 font-semibold text-sm items-start xl:items-center mt-2 xl:mt-1"
          />
        </td>
        <td
          class="lg:hidden"
        >
          <div
            class="px-3 transition-colors duration-100 min-h-11 items-end flex flex-col gap-1.5 my-3 xl:my-0"
          >
            <div
              class="rounded px-1.5 css-1pbju28"
              color="danger-bg"
              data-testid="AmountLabel__wrapper"
            >
              <div
                class="flex space-x-1 items-stretch"
              >
                <span
                  class="whitespace-nowrap text-sm"
                  data-testid="Amount"
                >
                  - 1 BTC
                </span>
              </div>
            </div>
            <div
              class="rounded px-1.5 css-givenh"
              color="success-bg"
              data-testid="AmountLabel__wrapper"
            >
              <div
                class="flex space-x-1 items-stretch"
              >
                <span
                  class="whitespace-nowrap text-sm"
                  data-testid="Amount"
                >
                  + 100 ARK
                </span>
              </div>
            </div>
          </div>
        </td>
        <td
          class="hidden lg:table-cell"
        >
          <div
            class="flex px-3 transition-colors duration-100 min-h-11 gap-3 justify-end items-start xl:items-center my-3 xl:my-0"
          >
            <div
              class="rounded px-1.5 css-1pbju28"
              color="danger-bg"
              data-testid="AmountLabel__wrapper"
            >
              <div
                class="flex space-x-1 items-stretch"
              >
                <span
                  class="whitespace-nowrap text-sm"
                  data-testid="Amount"
                >
                  - 1 BTC
                </span>
              </div>
            </div>
          </div>
        </td>
        <td
          class="hidden lg:table-cell"
        >
          <div
            class="flex px-3 transition-colors duration-100 min-h-11 gap-3 justify-end items-start xl:items-center my-3 xl:my-0"
          >
            <div
              class="rounded px-1.5 css-givenh"
              color="success-bg"
              data-testid="AmountLabel__wrapper"
            >
              <div
                class="flex space-x-1 items-stretch"
              >
                <span
                  class="whitespace-nowrap text-sm"
                  data-testid="Amount"
                >
                  + 100 ARK
                </span>
              </div>
            </div>
          </div>
        </td>
        <td>
          <div
            class="flex px-3 transition-colors duration-100 min-h-11 justify-center items-start xl:items-center my-3 xl:my-0"
          >
            <span>
              <div
                class="text-theme-warning-300 css-1i4b0eq"
                height="20"
                width="20"
              >
                <svg
                  id="circle-exclamation-mark"
                  viewBox="0 0 20 20"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <g
                    fill="none"
                    stroke="currentColor"
                    stroke-width="2"
                  >
                    <circle
                      cx="10"
                      cy="10"
                      r="9"
                      stroke-miterlimit="10"
                    />
                    <path
                      d="M10 10.5v-5"
                      stroke-linecap="round"
                      stroke-miterlimit="10"
                    />
                    <path
                      d="M10 14h0"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                    />
                  </g>
                </svg>
              </div>
            </span>
          </div>
        </td>
        <td>
          <div
            class="flex px-3 transition-colors duration-100 min-h-11 pr-6 rounded-r items-start xl:items-center justify-end text-theme-secondary-text my-3 xl:my-0"
          >
            <button
              class="px-5 py-3 space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed rounded text-theme-secondary-700 bg-transparent dark:text-theme-secondary-600 dark:bg-transparent css-1sy20y6"
              data-testid="TableRemoveButton--compact"
              type="button"
            >
              <div
                class="flex items-center space-x-2"
              >
                <div
                  class="css-1i4b0eq"
                  height="20"
                  width="20"
                >
                  <svg
                    id="trash"
                    viewBox="0 0 20 20"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <g
                      fill="none"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    >
                      <path
                        d="M1 3.629h18M11.8 1H8c-.7 0-1.3.607-1.3 1.315h0v1.314H13V2.315C13 1.607 12.5 1 11.8 1h0zM8 14.449v-6.37M11.8 14.449v-6.37M15.7 17.787c-.1.707-.6 1.213-1.3 1.213H5.3c-.7 0-1.2-.506-1.3-1.213L2.9 3.629h14l-1.2 14.158z"
                      />
                    </g>
                  </svg>
                </div>
              </div>
            </button>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`ExchangeTransactionsRow > should render compact 1`] = `
<div>
  <table>
    <tbody>
      <tr
        class="relative css-16ynu5g"
        data-testid="TableRow"
      >
        <td>
          <div
            class="flex px-3 transition-colors duration-100 min-h-11 pl-6 rounded-l items-start my-0 py-3 xl:py-4 xl:min-h-0 flex-col gap-1"
          >
            <button
              class="h-5 w-20 cursor-pointer truncate"
              type="button"
            >
              <div
                class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
              >
                <div
                  class="relative grow text-left"
                >
                  <span
                    class="no-ligatures min-w-0 overflow-hidden text-theme-primary-600 text-sm font-semibold text-base absolute w-full"
                    data-testid="Address__address"
                  >
                    id
                  </span>
                  <span>
                     
                  </span>
                </div>
              </div>
            </button>
            <div
              class="text-xs xl:hidden"
            >
              <span
                data-testid="TimeAgo"
              >
                A few seconds ago
              </span>
            </div>
          </div>
        </td>
        <td
          class="hidden text-sm xl:table-cell"
        >
          <div
            class="flex px-3 my-1 transition-colors duration-100 min-h-11 items-start xl:items-center font-semibold"
          >
            <span
              data-testid="TimeAgo"
            >
              A few seconds ago
            </span>
          </div>
        </td>
        <td>
          <div
            class="flex px-3 my-1 transition-colors duration-100 min-h-11 font-semibold text-sm items-start xl:items-center mt-2 xl:mt-1"
          />
        </td>
        <td
          class="lg:hidden"
        >
          <div
            class="px-3 transition-colors duration-100 min-h-11 items-end flex flex-col gap-1.5 my-3 xl:my-0"
          >
            <div
              class="rounded px-1.5 css-1pbju28"
              color="danger-bg"
              data-testid="AmountLabel__wrapper"
            >
              <div
                class="flex space-x-1 items-stretch"
              >
                <span
                  class="whitespace-nowrap text-sm"
                  data-testid="Amount"
                >
                  - 1 BTC
                </span>
              </div>
            </div>
            <div
              class="rounded px-1.5 css-givenh"
              color="success-bg"
              data-testid="AmountLabel__wrapper"
            >
              <div
                class="flex space-x-1 items-stretch"
              >
                <span
                  class="whitespace-nowrap text-sm"
                  data-testid="Amount"
                >
                  + 100 ARK
                </span>
              </div>
            </div>
          </div>
        </td>
        <td
          class="hidden lg:table-cell"
        >
          <div
            class="flex px-3 transition-colors duration-100 min-h-11 gap-3 justify-end items-start xl:items-center my-3 xl:my-0"
          >
            <div
              class="rounded px-1.5 css-1pbju28"
              color="danger-bg"
              data-testid="AmountLabel__wrapper"
            >
              <div
                class="flex space-x-1 items-stretch"
              >
                <span
                  class="whitespace-nowrap text-sm"
                  data-testid="Amount"
                >
                  - 1 BTC
                </span>
              </div>
            </div>
          </div>
        </td>
        <td
          class="hidden lg:table-cell"
        >
          <div
            class="flex px-3 transition-colors duration-100 min-h-11 gap-3 justify-end items-start xl:items-center my-3 xl:my-0"
          >
            <div
              class="rounded px-1.5 css-givenh"
              color="success-bg"
              data-testid="AmountLabel__wrapper"
            >
              <div
                class="flex space-x-1 items-stretch"
              >
                <span
                  class="whitespace-nowrap text-sm"
                  data-testid="Amount"
                >
                  + 100 ARK
                </span>
              </div>
            </div>
          </div>
        </td>
        <td>
          <div
            class="flex px-3 transition-colors duration-100 min-h-11 justify-center items-start xl:items-center my-3 xl:my-0"
          >
            <span>
              <div
                class="text-theme-danger-400 css-1i4b0eq"
                height="20"
                width="20"
              >
                <svg
                  id="circle-cross"
                  viewBox="0 0 20 20"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <g
                    fill="none"
                    stroke="currentColor"
                    stroke-width="2"
                  >
                    <circle
                      cx="10"
                      cy="10"
                      r="9"
                      stroke-miterlimit="10"
                    />
                    <path
                      d="M7 13l6-6M13 13L7 7"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                    />
                  </g>
                </svg>
              </div>
            </span>
          </div>
        </td>
        <td>
          <div
            class="flex px-3 transition-colors duration-100 min-h-11 pr-6 rounded-r items-start xl:items-center justify-end text-theme-secondary-text my-3 xl:my-0"
          >
            <button
              class="px-5 py-3 space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed rounded text-theme-secondary-700 bg-transparent dark:text-theme-secondary-600 dark:bg-transparent css-1sy20y6"
              data-testid="TableRemoveButton--compact"
              type="button"
            >
              <div
                class="flex items-center space-x-2"
              >
                <div
                  class="css-1i4b0eq"
                  height="20"
                  width="20"
                >
                  <svg
                    id="trash"
                    viewBox="0 0 20 20"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <g
                      fill="none"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    >
                      <path
                        d="M1 3.629h18M11.8 1H8c-.7 0-1.3.607-1.3 1.315h0v1.314H13V2.315C13 1.607 12.5 1 11.8 1h0zM8 14.449v-6.37M11.8 14.449v-6.37M15.7 17.787c-.1.707-.6 1.213-1.3 1.213H5.3c-.7 0-1.2-.506-1.3-1.213L2.9 3.629h14l-1.2 14.158z"
                      />
                    </g>
                  </svg>
                </div>
              </div>
            </button>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
